# guillotnicolas.real-python-application

./: LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/guillotnicolas/application/: me.py  this.py
src/guillotnicolas/real-python-application/: me.py
